redesign the inner join implementation