@@ -2,7 +2,6 @@ package exercise.io;
 
 import java.io.File;
 import java.util.List;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 public class FileScannerImpl implements FileScanner {
@@ -10,7 +9,7 @@ public class FileScannerImpl implements FileScanner {
 	@Override
 	public List<String> files(String dir) {
 		return Stream.of(new File(dir).listFiles()).filter(file -> !file.isDirectory()).map(File::getAbsolutePath)
-				.collect(Collectors.toList());
+				.toList();
 	}
 
 }
